--- a/src/components/UniverseSectionFinal/PresenceOverlay.css
+++ b/src/components/UniverseSectionFinal/PresenceOverlay.css
@@ -79,7 +79,7 @@
     transform: translate(-50%, -50%);
     animation-delay: 0.7s;
     color: #BC224C;
-    font-family: "PP Neue Montreal", serif;
+    font-family: "PPNeueMontreal-Book-otf", serif;
     font-size: clamp(2.5rem, 4.5vw, 4rem);
     font-weight: 300;
     line-height: 90%;
@@ -97,7 +97,7 @@
     text-align: left;
     animation-delay: 0.9s;
     color: #000;
-    font-family: "BT Beau Sans", sans-serif;
+    font-family: "BT-BeauSans-Regular-ttf", sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -114,7 +114,7 @@
     text-align: left;
     animation-delay: 1.1s;
     color: #797979;
-    font-family: "BT Beau Sans", sans-serif;
+    font-family: "BT-BeauSans-Regular-ttf", sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 110%;
