--- a/src/components/UniverseSectionFinal/SensesOverlay.css
+++ b/src/components/UniverseSectionFinal/SensesOverlay.css
@@ -49,7 +49,7 @@
 .senses-title {
     color: var(--Pink, #BC224C);
     text-align: center;
-    font-family: "Saol Display";
+    font-family: "SaolDisplay-Regular-ttf";
     font-size: 64px;
     font-style: normal;
     font-weight: 300;
@@ -66,7 +66,7 @@
 .sense-item {
     color: var(--Pink, #BC224C);
     text-align: center;
-    font-family: "BT Beau Sans";
+    font-family: "BT-BeauSans-Regular-ttf";
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
