--- a/src/components/UniverseSectionFinal/SpaceOverlay.css
+++ b/src/components/UniverseSectionFinal/SpaceOverlay.css
@@ -224,7 +224,7 @@
 }
 
 .space-description p {
-    font-family: "BT Beau Sans", sans-serif;
+    font-family: "BT-BeauSans-Regular-ttf", sans-serif;
     font-size: clamp(8px, 1.5vw, 12px);
     font-weight: 400;
     line-height: 1.4;
@@ -240,7 +240,7 @@
     /* Áp dụng style theo yêu cầu */
     color: #BC224C;
     text-align: center;
-    font-family: "Saol Display", serif;
+    font-family: "SaolDisplay-Regular-ttf", serif;
     font-size: clamp(2.5rem, 6vw, 4rem);
     font-style: normal;
     font-weight: 300;
