--- a/src/components/UniverseSectionFinal/TimeOverlay.css
+++ b/src/components/UniverseSectionFinal/TimeOverlay.css
@@ -56,7 +56,7 @@
 .time-title {
     color: #BC224C;
     text-align: center;
-    font-family: "Saol Display", serif;
+    font-family: "SaolDisplay-Regular-ttf", serif;
     /* Thêm "serif" làm font dự phòng */
     font-size: 64px;
     font-style: normal;
@@ -72,7 +72,7 @@
 .time-tagline {
     color: #000;
     text-align: center;
-    font-family: "BT Beau Sans", sans-serif;
+    font-family: "BT-BeauSans-Regular-ttf", sans-serif;
     /* Thêm "sans-serif" làm font dự phòng */
     font-size: 16px;
     font-style: normal;
@@ -86,7 +86,7 @@
 .time-description {
     color: #797979;
     text-align: center;
-    font-family: "BT Beau Sans", sans-serif;
+    font-family: "BT-BeauSans-Regular-ttf", sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
