--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -95,7 +95,7 @@
   background: transparent;
   color: white;
   padding: 8px 16px;
-  font-family: "BT Beau Sans", sans-serif;
+  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
@@ -155,7 +155,7 @@
 }
 
 .menu-popup li {
-  font-family: "BT Beau Sans", sans-serif;
+  font-family: "BT-BeauSans-Regular-ttf", sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: #e0e0e0;
